--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Matyscripta</title>
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <main>
-        <h1>Matyscripta</h1>  
-        <p>This is my new website which is hosted on GitHub Pages!</p>
+      <header>
+        <div class="content-width">
+          <h1>Sweet strawberry cheesecake</h1>
+          <p><em>Sweet muffin bear claw</em> donut chupa chups liquorice tiramisu candy canes sweet.</p>
+        </div>
+      </header>
+
+      <div class="content-width">
+        This will soon be the content of my website!
+      </div>
     </main>
   </body>
 </html>
