--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <main>
       <header>
         <div class="content-width">
-          <h1>Sweet strawberry cheesecake</h1>
-          <p><em>Sweet muffin bear claw</em> donut chupa chups liquorice tiramisu candy canes sweet.</p>
+          <h1>Matyscripta</h1>
+          <p><em>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through a simple links</p>
         </div>
       </header>
 
