--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <header>
         <div class="content-width">
           <h1>Matyscripta</h1>
-          <p><em>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through a simple links</p>
+          <p><em>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through simple links</p>
         </div>
       </header>
 
