--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Matyscripta</title>
-    <link href="styles.css" rel="stylesheet" />
-  </head>
+<head>
+<style>
+@import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+body {
+  font-family: 'Inter', sans-serif;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 400;
+  line-height: 1.58;
+  letter-spacing: -.003em;
+  font-size: 20px;
+  padding: 70px;
+  max-width:500px;
+}
+
+h1 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 38px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+}
+
+</style>
+</head>
   <body>
     <main>
       <header>
         <div class="content-width">
           <h1>Matyscripta</h1>
-          <p><em>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through simple links</p>
+          <p>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through simple links</p>
         </div>
       </header>
 
@@ -21,3 +43,5 @@
     </main>
   </body>
 </html>
+
+
