--- a/index.html
+++ b/index.html
@@ -26,6 +26,45 @@ h1 {
   -webkit-font-smoothing: antialiased;
 }
 
+h2 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 32px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
+h3 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
+h4 {
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 22px;
+  line-height: 1.15;
+  letter-spacing: -.02em;
+  color: rgba(0, 0, 0, 0.8);
+  -webkit-font-smoothing: antialiased;
+  margin-bottom: 5px;
+  margin-top: 25px;
+}
+
 </style>
 </head>
   <body>
@@ -40,6 +79,19 @@ h1 {
       <div class="content-width">
         This will soon be the content of my website!
       </div>
+      
+      <h2>Notion</h2>
+      <h3>Sexta</h3>
+      <h4>Biologie</h4>
+      	<a href="/uploads/media/houby-2023-06-05.pdf">Houby</a>
+        <br>
+		<a href="/uploads/media/zivocichove-2023-06-05.pdf">Živočichové</a>
+        <br>
+      <h4>Fyzika</h4>
+      	<a href="/uploads/media/termodynamika-2023-06-05.pdf">Termodynamika</a><br>
+        <a href="/uploads/media/pevne-latky-2023-06-05.pdf">Pevné látky</a><br>
+        <a href="/uploads/media/kapaliny-2023-06-05.pdf">Kapaliny</a><br>
+        <a href="/uploads/media/elektrina-2023-06-05.pdf">Elektřina</a><br>
     </main>
   </body>
 </html>
