--- a/index.html
+++ b/index.html
@@ -95,20 +95,7 @@ background-color: #FFFFFF; /* Green */
       <button type="button" class="collapsible"><h2>Notion</h2></button>
 <div class="content">
 
-
-      
-      <h3>Sexta</h3>
-      <h4>Biologie</h4>
-      	<a href="/uploads/media/houby-2023-06-05.pdf">Houby</a>
-        <br>
-		<a href="/uploads/media/zivocichove-2023-06-05.pdf">Živočichové</a>
-        <br>
-      <h4>Fyzika</h4>
-      	<a href="/uploads/media/termodynamika-2023-06-05.pdf">Termodynamika</a><br>
-        <a href="/uploads/media/pevne-latky-2023-06-05.pdf">Pevné látky</a><br>
-        <a href="/uploads/media/kapaliny-2023-06-05.pdf">Kapaliny</a><br>
-        <a href="/uploads/media/elektrina-2023-06-05.pdf">Elektřina</a><br>
-        </div>
+      	<a href="https://docs.google.com/document/d/1u682L1WHR8DR4t-WYeRhVIiSaTOsok8m46JBlGuVAOs/edit?usp=sharing">Vznik Spojených států amerických</a>
     </main>
   </body>
 </html>
