--- a/index.html
+++ b/index.html
@@ -1,82 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
-body {
-  font-family: 'Inter', sans-serif;
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: 400;
-  line-height: 1.58;
-  letter-spacing: -.003em;
-  font-size: 20px;
-  padding: 70px;
-  max-width:500px;
-  margin-left: auto;
-  margin-right:auto
-}
-
-h1 {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 38px;
-  line-height: 1.15;
-  letter-spacing: -.02em;
-  color: rgba(0, 0, 0, 0.8);
-  -webkit-font-smoothing: antialiased;
-}
-
-h2 {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 32px;
-  line-height: 1.15;
-  letter-spacing: -.02em;
-  color: rgba(0, 0, 0, 0.8);
-  -webkit-font-smoothing: antialiased;
-  margin-bottom: 0;
-  margin-top: 30px;
-}
-
-h3 {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 26px;
-  line-height: 1.15;
-  letter-spacing: -.02em;
-  color: rgba(0, 0, 0, 0.8);
-  -webkit-font-smoothing: antialiased;
-  margin-bottom: 5px;
-  margin-top: 25px;
-}
-
-h4 {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
-  font-style: normal;
-  font-size: 22px;
-  line-height: 1.15;
-  letter-spacing: -.02em;
-  color: rgba(0, 0, 0, 0.8);
-  -webkit-font-smoothing: antialiased;
-  margin-bottom: 5px;
-  margin-top: 25px;
-}
-
-button {
-background-color: #FFFFFF; /* Green */
-  border: none;
-  color: white;
-  border: 0;
-  padding: 0;
-
-}
-
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
   <body>
     <main>
@@ -86,16 +11,11 @@ background-color: #FFFFFF; /* Green */
           <p>I will try to upload all sorts of pdf's and links to this page so that everything I make is simply available to everyone just through simple links</p>
         </div>
       </header>
-
-      <div class="content-width">
-        This will soon be the content of my website!
-      </div>
-      
       
       <button type="button" class="collapsible"><h2>Notion</h2></button>
 <div class="content">
 
-      	<a href="https://docs.google.com/document/d/1u682L1WHR8DR4t-WYeRhVIiSaTOsok8m46JBlGuVAOs/edit?usp=sharing">Vznik Spojených států amerických</a>
+      	<a href="vznik_usa.html">Vznik Spojených států amerických</a>
     </main>
   </body>
 </html>
