--- a/vznik_usa.html
+++ b/vznik_usa.html
@@ -13,6 +13,6 @@
 <a href="https://docs.google.com/document/d/1u682L1WHR8DR4t-WYeRhVIiSaTOsok8m46JBlGuVAOs/edit?usp=sharing">Text - Google Docs</a>
 <br>
 <a href="content\vznik_usa_text_local.html">Text - Local file</a>
-<div class="bottomright">made with ❤️ by <a style="color: black; text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
-<div class="bottomleft"><a style="color: black; text-decoration:none" href="index.html">Home</b></div>
+<div class="bottomright">made with ❤️ by <a style="color: rgba(0, 0, 0, 0.8); text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
+<div class="bottomleft"><a style="color: rgba(0, 0, 0); text-decoration:none" href="index.html">Home</b></div>
 </div>
