--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
       	<a href="vznik_usa.html">Vznik Spojených států amerických</a>
     </main>
+    <div class="bottomright">made with ❤️ by <a style="color: rgba(0, 0, 0, 0.8); text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
+    <div class="bottomleft"><a style="color: rgba(0, 0, 0); text-decoration:none" href="index.html">You're home aleady! 🏠</b></div>
   </body>
 </html>
 
