--- a/content/vznik_usa_text_local.html
+++ b/content/vznik_usa_text_local.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <style type="text/css">
       .lst-kix_wbt7a5vc1nk4-1>li:before {
