--- a/id_en.html
+++ b/id_en.html
@@ -11,7 +11,7 @@
 		<p style="line-height: 1;">📱&nbsp; +420 735 913 825</p>
 		<p style="line-height: 1;"><svg height="30" style="vertical-align: middle; margin-right: 5px;" viewbox="328 355 335 276" width="30" xmlns="http://www.w3.org/2000/svg">
 		<path d="M 630, 425 A 195, 195 0 0 1 331, 600 A 142, 142 0 0 0 428, 570 A 70, 70 0 0 1 370, 523 A 70, 70 0 0 0 401, 521 A 70, 70 0 0 1 344, 455 A 70, 70 0 0 0 372, 460 A 70, 70 0 0 1 354, 370 A 195, 195 0 0 0 495, 442 A 67, 67 0 0 1 611, 380 A 117, 117 0 0 0 654, 363 A 65, 65 0 0 1 623, 401 A 117, 117 0 0 0 662, 390 A 65, 65 0 0 1 630, 425 Z" style="fill:#3BA9EE;"></path></svg> <a href="https://github.com/matyasmatta/" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta05</a></p>
-	</div><button class="obsidian-button">Contact card!</button>
+	</div><button class="obsidian-button"><a style="color: rgba(255, 255, 255, 0.8); text-decoration:none; font-weight:500" href="Matyáš_Matta.vcf" download>Contact card!</a></button></button>
 	<div class="bottomleft">
 		<a href="index.html" style="color: rgba(0, 0, 0); text-decoration:none">Home</a>
 	</div>
