--- a/id_en.html
+++ b/id_en.html
@@ -1,21 +1,50 @@
+<!DOCTYPE html>
+<html>
 <head>
-    <link rel="stylesheet" href="styles.css">
+	<link href="styles.css" rel="stylesheet">
+	<title></title>
 </head>
-
-<header>
-	<div class="content-width">
-		<h1>Matyáš Matta</h1>
-		<p style="line-height: 1;"><a href="mailto:matyasmatta@email.cz" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">✉️ &nbsp; matyasmatta@email.cz</a></p>
-		<p style="line-height: 1; display: flex; align-items: center;"><svg height="30" style="vertical-align: middle; margin-right: 5px;" viewbox="0 0 18 18" width="30" xmlns="http://www.w3.org/2000/svg">
-		<path d="M8 .99C3.58 .99 0 4.57 0 8.99c0 3.85 2.49 7.13 5.95 8.28.44.08.6-.19.6-.42 0-.21-.01-.78-.01-1.53-2.19.43-2.65-1.06-2.65-1.06-.36-.91-.88-1.15-.88-1.15-.72-.49.06-.48.06-.48.79.06 1.2.82 1.2.82.7 1.18 1.85.84 2.3.65.07-.51.27-.85.49-1.05-1.72-.2-3.54-.86-3.54-3.85 0-.85.3-1.55.8-2.1-.08-.2-.35-1 .08-2.08 0 0 .66-.21 2.15.8.63-.18 1.3-.27 1.96-.3.66.03 1.33.12 1.96.3 1.49-1.01 2.15-.8 2.15-.8.43 1.08.16 1.88.08 2.08.5.55.8 1.25.8 2.1 0 2.99-1.82 3.65-3.55 3.85.28.24.53.72.53 1.46 0 1.06-.01 1.92-.01 2.18 0 .23.16.5.61.41C13.51 16.13 16 12.85 16 8.99 16 4.57 12.42.99 8 .99z" fill="rgba(0, 0, 0, 0.8)"></path></svg> <a href="https://github.com/matyasmatta/" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">&nbsp;@matyasmatta</a></p>
-		<p style="line-height: 1;">📱&nbsp; +420 735 913 825</p>
-		<p style="line-height: 1;"><svg height="30" style="vertical-align: middle; margin-right: 5px;" viewbox="328 355 335 276" width="30" xmlns="http://www.w3.org/2000/svg">
-		<path d="M 630, 425 A 195, 195 0 0 1 331, 600 A 142, 142 0 0 0 428, 570 A 70, 70 0 0 1 370, 523 A 70, 70 0 0 0 401, 521 A 70, 70 0 0 1 344, 455 A 70, 70 0 0 0 372, 460 A 70, 70 0 0 1 354, 370 A 195, 195 0 0 0 495, 442 A 67, 67 0 0 1 611, 380 A 117, 117 0 0 0 654, 363 A 65, 65 0 0 1 623, 401 A 117, 117 0 0 0 662, 390 A 65, 65 0 0 1 630, 425 Z" style="fill:#3BA9EE;"></path></svg> <a href="https://github.com/matyasmatta/" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta05</a></p>
-	</div><button class="obsidian-button"><a style="color: rgba(255, 255, 255, 0.8); text-decoration:none; font-weight:500" href="Matyáš_Matta.vcf" download>Contact card!</a></button></button>
-	<div class="bottomleft">
-		<a href="index.html" style="color: rgba(0, 0, 0); text-decoration:none">Home</a>
-	</div>
-	<div class="bottomright">
-		made with ❤️ by <a href="https://twitter.com/matyasmatta05" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta</a>
-	</div>
-</header>
+<body>
+	<header>
+		<div class="content-width">
+			<h1>Matyáš Matta</h1>
+			<p style="line-height: 1;"><a href="mailto:matyasmatta@email.cz" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">✉️ &nbsp; matyasmatta@email.cz</a></p>
+			<p style="line-height: 1; display: flex; align-items: center;"><svg height="30" style="vertical-align: middle; margin-right: 5px;" viewbox="0 0 18 18" width="30" xmlns="http://www.w3.org/2000/svg">
+			<path d="M8 .99C3.58 .99 0 4.57 0 8.99c0 3.85 2.49 7.13 5.95 8.28.44.08.6-.19.6-.42 0-.21-.01-.78-.01-1.53-2.19.43-2.65-1.06-2.65-1.06-.36-.91-.88-1.15-.88-1.15-.72-.49.06-.48.06-.48.79.06 1.2.82 1.2.82.7 1.18 1.85.84 2.3.65.07-.51.27-.85.49-1.05-1.72-.2-3.54-.86-3.54-3.85 0-.85.3-1.55.8-2.1-.08-.2-.35-1 .08-2.08 0 0 .66-.21 2.15.8.63-.18 1.3-.27 1.96-.3.66.03 1.33.12 1.96.3 1.49-1.01 2.15-.8 2.15-.8.43 1.08.16 1.88.08 2.08.5.55.8 1.25.8 2.1 0 2.99-1.82 3.65-3.55 3.85.28.24.53.72.53 1.46 0 1.06-.01 1.92-.01 2.18 0 .23.16.5.61.41C13.51 16.13 16 12.85 16 8.99 16 4.57 12.42.99 8 .99z" fill="rgba(0, 0, 0, 0.8)"></path></svg> <a href="https://github.com/matyasmatta/" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">&nbsp;@matyasmatta</a></p>
+			<p style="line-height: 1;">📱&nbsp; +420 735 913 825</p>
+			<p style="line-height: 1;"><svg height="30" style="vertical-align: middle; margin-right: 5px;" viewbox="328 355 335 276" width="30" xmlns="http://www.w3.org/2000/svg">
+			<path d="M 630, 425 A 195, 195 0 0 1 331, 600 A 142, 142 0 0 0 428, 570 A 70, 70 0 0 1 370, 523 A 70, 70 0 0 0 401, 521 A 70, 70 0 0 1 344, 455 A 70, 70 0 0 0 372, 460 A 70, 70 0 0 1 354, 370 A 195, 195 0 0 0 495, 442 A 67, 67 0 0 1 611, 380 A 117, 117 0 0 0 654, 363 A 65, 65 0 0 1 623, 401 A 117, 117 0 0 0 662, 390 A 65, 65 0 0 1 630, 425 Z" style="fill:#3BA9EE;"></path></svg> <a href="https://github.com/matyasmatta/" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta05</a></p>
+			<p style="line-height: 1;"><svg height="35" viewbox="0 0 175 175" xmlns="http://www.w3.org/2000/svg">
+			<defs>
+				<lineargradient gradientunits="userSpaceOnUse" id="b" x1="85.915" x2="86.535" y1="32.567" y2="137.092">
+					<stop offset="0" stop-color="#57d163"></stop>
+					<stop offset="1" stop-color="#23b33a"></stop>
+				</lineargradient>
+				<filter color-interpolation-filters="sRGB" height="1.114" id="a" width="1.115" x="-.057" y="-.057">
+					<fegaussianblur stddeviation="3.531"></fegaussianblur>
+				</filter>
+			</defs>
+			<path d="m54.532 138.45 2.235 1.324c9.387 5.571 20.15 8.518 31.126 8.523h.023c33.707 0 61.139-27.426 61.153-61.135.006-16.335-6.349-31.696-17.895-43.251A60.75 60.75 0 0 0 87.94 25.983c-33.733 0-61.166 27.423-61.178 61.13a60.98 60.98 0 0 0 9.349 32.535l1.455 2.312-6.179 22.558zm-40.811 23.544L24.16 123.88c-6.438-11.154-9.825-23.808-9.821-36.772.017-40.556 33.021-73.55 73.578-73.55 19.681.01 38.154 7.669 52.047 21.572s21.537 32.383 21.53 52.037c-.018 40.553-33.027 73.553-73.578 73.553h-.032c-12.313-.005-24.412-3.094-35.159-8.954zm0 0" fill="#b3b3b3" filter="url(#a)"></path>
+			<path d="m12.966 161.238 10.439-38.114a73.42 73.42 0 0 1-9.821-36.772c.017-40.556 33.021-73.55 73.578-73.55 19.681.01 38.154 7.669 52.047 21.572s21.537 32.383 21.53 52.037c-.018 40.553-33.027 73.553-73.578 73.553h-.032c-12.313-.005-24.412-3.094-35.159-8.954z" fill="#fff"></path>
+			<path d="M87.184 25.227c-33.733 0-61.166 27.423-61.178 61.13a60.98 60.98 0 0 0 9.349 32.535l1.455 2.312-6.179 22.559 23.146-6.069 2.235 1.324c9.387 5.571 20.15 8.518 31.126 8.524h.023c33.707 0 61.14-27.426 61.153-61.135a60.75 60.75 0 0 0-17.895-43.251 60.75 60.75 0 0 0-43.235-17.929z" fill="url(#linearGradient1780)"></path>
+			<path d="M87.184 25.227c-33.733 0-61.166 27.423-61.178 61.13a60.98 60.98 0 0 0 9.349 32.535l1.455 2.313-6.179 22.558 23.146-6.069 2.235 1.324c9.387 5.571 20.15 8.517 31.126 8.523h.023c33.707 0 61.14-27.426 61.153-61.135a60.75 60.75 0 0 0-17.895-43.251 60.75 60.75 0 0 0-43.235-17.928z" fill="url(#b)"></path>
+			<path d="M68.772 55.603c-1.378-3.061-2.828-3.123-4.137-3.176l-3.524-.043c-1.226 0-3.218.46-4.902 2.3s-6.435 6.287-6.435 15.332 6.588 17.785 7.506 19.013 12.718 20.381 31.405 27.75c15.529 6.124 18.689 4.906 22.061 4.6s10.877-4.447 12.408-8.74 1.532-7.971 1.073-8.74-1.685-1.226-3.525-2.146-10.877-5.367-12.562-5.981-2.91-.919-4.137.921-4.746 5.979-5.819 7.206-2.144 1.381-3.984.462-7.76-2.861-14.784-9.124c-5.465-4.873-9.154-10.891-10.228-12.73s-.114-2.835.808-3.751c.825-.824 1.838-2.147 2.759-3.22s1.224-1.84 1.836-3.065.307-2.301-.153-3.22-4.032-10.011-5.666-13.647" fill="#fff" fill-rule="evenodd"></path></svg> <a href="https://w.me/420735913825" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">Matyáš Matta</a></p>
+			<p style="line-height: 1;"><svg height="30" viewbox="0 0 800 800" width="30" xmlns="http://www.w3.org/2000/svg">
+			<radialgradient cx="101.9" cy="809" gradienttransform="matrix(800 0 0 -800 -81386 648000)" gradientunits="userSpaceOnUse" id="a" r="1.1">
+				<stop offset="0" style="stop-color:#09f"></stop>
+				<stop offset=".6" style="stop-color:#a033ff"></stop>
+				<stop offset=".9" style="stop-color:#ff5280"></stop>
+				<stop offset="1" style="stop-color:#ff7061"></stop>
+			</radialgradient>
+			<path d="M400 0C174.7 0 0 165.1 0 388c0 116.6 47.8 217.4 125.6 287 6.5 5.8 10.5 14 10.7 22.8l2.2 71.2a32 32 0 0 0 44.9 28.3l79.4-35c6.7-3 14.3-3.5 21.4-1.6 36.5 10 75.3 15.4 115.8 15.4 225.3 0 400-165.1 400-388S625.3 0 400 0z" fill="url(#a)"></path>
+			<path d="m159.8 501.5 117.5-186.4a60 60 0 0 1 86.8-16l93.5 70.1a24 24 0 0 0 28.9-.1l126.2-95.8c16.8-12.8 38.8 7.4 27.6 25.3L522.7 484.9a60 60 0 0 1-86.8 16l-93.5-70.1a24 24 0 0 0-28.9.1l-126.2 95.8c-16.8 12.8-38.8-7.3-27.5-25.2z" fill="#FFF"></path></svg> <a href="https://m.me/matyasmatta" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta</a></p>
+		</div><button class="obsidian-button"><a href="Maty%C3%A1%C5%A1_Matta.vcf" style="color: rgba(255, 255, 255, 0.8); text-decoration:none; font-weight:500">Contact card!</a></button>
+		<div class="bottomleft">
+			<a href="index.html" style="color: rgba(0, 0, 0); text-decoration:none">Home</a>
+		</div>
+		<div class="bottomright">
+			made with ❤️ by <a href="https://twitter.com/matyasmatta05" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta</a>
+		</div>
+	</header>
+</body>
+</html>
