--- a/id_en.html
+++ b/id_en.html
@@ -4,9 +4,11 @@
 	<link href="styles.css" rel="stylesheet">
 	<title></title>
 	<style>
+
+		
 		.table-row {
-			display: flex;
-			align-items: left;
+			display: table-row;
+			line-height: 1.8em;
 		}
         .table-row * {
 			margin-left: 10px;
@@ -16,6 +18,18 @@
 			color: rgba(0, 0, 0, 0.8);
 			text-decoration: none;
 		}
+		.table-row td {
+			display: table-cell;
+			vertical-align: middle;
+		}
+		.left-column {
+			text-align: center;
+			vertical-align: middle;
+			align-items: center;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
 	</style>
 </head>
 <body>
@@ -24,8 +38,8 @@
 			<h1>Matyáš Matta</h1>
 			<table>
 				<tr class="table-row">
-					<td>
-						<svg height="35" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg">
+					<td class="left-column">
+						<svg height="35" viewBox="0 0 16 17" xmlns="http://www.w3.org/2000/svg">
 							<path d="M8 .99C3.58 .99 0 4.57 0 8.99c0 3.85 2.49 7.13 5.95 8.28.44.08.6-.19.6-.42 0-.21-.01-.78-.01-1.53-2.19.43-2.65-1.06-2.65-1.06-.36-.91-.88-1.15-.88-1.15-.72-.49.06-.48.06-.48.79.06 1.2.82 1.2.82.7 1.18 1.85.84 2.3.65.07-.51.27-.85.49-1.05-1.72-.2-3.54-.86-3.54-3.85 0-.85.3-1.55.8-2.1-.08-.2-.35-1 .08-2.08 0 0 .66-.21 2.15.8.63-.18 1.3-.27 1.96-.3.66.03 1.33.12 1.96.3 1.49-1.01 2.15-.8 2.15-.8.43 1.08.16 1.88.08 2.08.5.55.8 1.25.8 2.1 0 2.99-1.82 3.65-3.55 3.85.28.24.53.72.53 1.46 0 1.06-.01 1.92-.01 2.18 0 .23.16.5.61.41C13.51 16.13 16 12.85 16 8.99 16 4.57 12.42 .99 8 .99z" fill="rgba(0, 0, 0, 0.8)"></path>
 						</svg>
 					</td>
@@ -36,7 +50,7 @@
 					</td>
 				</tr>
                 <tr class="table-row">
-					<td>
+					<td class="left-column">
 						✉️
 					</td>
 					<td>
@@ -46,7 +60,7 @@
 					</td>
 				</tr>
 				<tr class="table-row">
-					<td>
+					<td class="left-column">
 						<svg height="30" viewBox="328 355 335 276" width="30" xmlns="http://www.w3.org/2000/svg">
 							<path d="M 630, 425 A 195, 195 0 0 1 331, 600 A 142, 142 0 0 0 428, 570 A 70, 70 0 0 1 370, 523 A 70, 70 0 0 0 401, 521 A 70, 70 0 0 1 344, 455 A 70, 70 0 0 0 372, 460 A 70, 70 0 0 1 354, 370 A 195, 195 0 0 0 495, 442 A 67, 67 0 0 1 611, 380 A 117, 117 0 0 0 654, 363 A 65, 65 0 0 1 623, 401 A 117, 117 0 0 0 662, 390 A 65, 65 0 0 1 630, 425 Z" style="fill:#3BA9EE;"></path>
 						</svg>
@@ -58,7 +72,7 @@
 					</td>
 				</tr>
 				<tr class="table-row">
-					<td>
+					<td class="left-column">
 						<svg height="35" viewBox="0 0 175 175" xmlns="http://www.w3.org/2000/svg">
 							<defs>
 								<linearGradient gradientUnits="userSpaceOnUse" id="b" x1="85.915" x2="86.535" y1="32.567" y2="137.092">
@@ -83,7 +97,7 @@
 					</td>
 				</tr>
 				<tr class="table-row">
-					<td>
+					<td class="left-column">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" width="30px">
 							<path d="M 64 2 C 29.8 2 2 29.8 2 64 C 2 74.5 4.5992188 84.800391 9.6992188 93.900391 L 4.4003906 113.30078 C 3.5003906 116.40078 4.3992188 119.60039 6.6992188 121.90039 C 8.9992188 124.20039 12.200781 125.10078 15.300781 124.30078 L 35.5 119 C 44.3 123.6 54.099609 126 64.099609 126 C 98.299609 126 126.09961 98.2 126.09961 64 C 125.99961 47.5 119.60039 31.899219 107.90039 20.199219 C 96.200391 8.4992188 80.6 2 64 2 z M 64 8 C 79 8 93.099609 13.800391 103.59961 24.400391 C 114.19961 35.000391 120.1 49.1 120 64 C 120 94.9 94.9 120 64 120 C 54.7 120 45.399219 117.59922 37.199219 113.19922 C 36.799219 112.99922 36.300781 112.80078 35.800781 112.80078 C 35.500781 112.80078 35.3 112.80039 35 112.90039 L 13.699219 118.5 C 12.199219 118.9 11.200781 118.09922 10.800781 117.69922 C 10.400781 117.29922 9.6 116.30078 10 114.80078 L 15.599609 94.199219 C 15.799609 93.399219 15.700781 92.600391 15.300781 91.900391 C 10.500781 83.500391 8 73.8 8 64 C 8 33.1 33.1 8 64 8 z M 64 17 C 38.1 17 17 38 17 64 C 17 72.3 19.200781 80.4 23.300781 87.5 C 24.900781 90.3 25.3 93.599219 24.5 96.699219 L 21.599609 107.19922 L 32.800781 104.30078 C 33.800781 104.00078 34.800781 103.90039 35.800781 103.90039 C 37.800781 103.90039 39.8 104.40039 41.5 105.40039 C 48.4 109.00039 56.1 111 64 111 C 89.9 111 111 89.9 111 64 C 111 51.4 106.10078 39.599219 97.300781 30.699219 C 88.400781 21.899219 76.6 17 64 17 z M 94.494141 45.939453 C 96.444141 46.037891 98.000781 48.174219 96.800781 50.199219 L 81.800781 74.599609 C 78.200781 80.399609 70.199609 81.600391 65.099609 76.900391 L 56.099609 68.599609 C 54.799609 67.399609 52.700781 67.3 51.300781 68.5 L 35.199219 82.300781 C 32.299219 84.800781 28.200781 81.2 30.300781 78 L 46 53.5 C 49.3 48.4 56.300391 47.299219 60.900391 51.199219 L 71.300781 59.900391 C 72.600781 61.000391 74.500781 61.000391 75.800781 59.900391 L 92.5 46.599609 C 93.15 46.099609 93.844141 45.906641 94.494141 45.939453 z"/>
 						</svg>
@@ -95,7 +109,7 @@
 					</td>
 				</tr>
                 <tr class="table-row">
-					<td>
+					<td class="left-column">
 						📱
 					</td>
 					<td>
@@ -106,6 +120,7 @@
 				</tr>
 			</table>
 		</div>
+		<br>
 		<button class="obsidian-button"><a href="Maty%C3%A1%C5%A1_Matta.vcf" style="color: rgba(255, 255, 255, 0.8); text-decoration:none; font-weight:500">Contact card!</a></button>
 		<div class="bottomleft">
 			<a href="index.html" style="color: rgba(0, 0, 0); text-decoration:none">Home</a>
