--- a/id_en.html
+++ b/id_en.html
@@ -66,8 +66,8 @@
 						</svg>
 					</td>
 					<td>
-						<a href="https://github.com/matyasmatta/">
-							@matyasmatta
+						<a href="https://twitter.com/matyasmatta05/">
+							@matyasmatta05
 						</a>
 					</td>
 				</tr>
@@ -91,7 +91,7 @@
 						</svg>
 					</td>
 					<td>
-						<a href="https://w.me/420735913825">
+						<a href="https://wa.me/420735913825">
 							Matyáš Matta
 						</a>
 					</td>
@@ -126,8 +126,24 @@
 			<a href="index.html" style="color: rgba(0, 0, 0); text-decoration:none">Home</a>
 		</div>
 		<div class="bottomright">
-			made with ❤️ by <a href="https://twitter.com/matyasmatta05" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta</a>
+			made with ❤️ by <a href="tel:00420735913825" style="color: rgba(0, 0, 0, 0.8); text-decoration:none">@matyasmatta</a>
 		</div>
 	</header>
+	<script>
+		function myFunction() {
+		  // Get the text field
+		  var copyText = document.getElementById("myInput");
+		
+		  // Select the text field
+		  copyText.select();
+		  copyText.setSelectionRange(0, 99999); // For mobile devices
+		
+		  // Copy the text inside the text field
+		  navigator.clipboard.writeText(copyText.value);
+		  
+		  // Alert the copied text
+		  alert("Copied the text: " + copyText.value);
+		}
+		</script>
 </body>
 </html>
