dynamic scaling of icons svg fix for mobile

--- a/id_en.html
+++ b/id_en.html
@@ -5,8 +5,8 @@
 	<title></title>
 	<style>
 		svg {
-			height: 35px !important;
-			width: 35px !important;
+			height: 1.3em !important;
+			width: 1.3em !important;
 			text-align: center;
 			display: flex;
 			justify-content: center; /* Horizontally center the SVG */
