--- a/id_en.html
+++ b/id_en.html
@@ -38,6 +38,10 @@
 			justify-content: center;
 			align-items: center;
 		}
+
+		.obsidian-button {
+			margin-bottom: 4em;
+		}
 	</style>
 </head>
 <body>
