--- a/mouse_dystopia.html
+++ b/mouse_dystopia.html
@@ -1,5 +1,14 @@
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<header>
+    <div class="content-width">
+      <h1>Universe 25 aka mouse dystopia</h1>
+    </div>
+  </header>
 <hr>
-<h2 id="tags-science-psychology">tags: science, psychology</h2>
+<i id="tags-science-psychology">tags: science, psychology</i>
 <h2 id="sources">Sources</h2>
 <p><a href="https://sciencehistory.org/stories/magazine/mouse-heaven-or-mouse-hell/">Mouse Heaven or Mouse Hell? | Science History Institute</a>
 <a href="https://www.reddit.com/r/todayilearned/comments/2x9kbp/til_there_was_a_manmade_mouse_utopia_called/">TIL there was a man-made mouse utopia called Universe 25</a>
@@ -158,3 +167,7 @@
 </ul>
 </li>
 </ul>
+
+<div class="bottomright">made with ❤️ by <a style="color: rgba(0, 0, 0, 0.8); text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
+<div class="bottomleft"><a style="color: rgba(0, 0, 0); text-decoration:none" href="index.html">Home</b></div>
+</div>
