added some stuff

--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -13,7 +13,7 @@
 <body>
     <h1>Slepá mapa na Zeměpis by Matyáš Matta</h1>
     <div id="map"></div>
-    <button id="submitGuess">Submit Guess</button>
+    <button id="submitGuess">Potvrdit můj výběr</button>
     <div id="result"></div>
     <h2>Aktuálně hledáš:</h2>
     <p id="poi-name"></p>
