--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -15,7 +15,7 @@
     <div id="map"></div>
     <button id="submitGuess">Potvrdit můj výběr</button>
     <div id="result"></div>
-    <h2>Aktuálně hledáš:</h2>
-    <p id="poi-name"></p>
+    <h3 style="margin: 0.5em;">Aktuálně hledáš</h3>
+    <div id="poi-type" style="margin: 0px; break-after: avoid;"></div><h2 id="poi-name"></h2>
 </body>
 </html>
