--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -11,11 +11,13 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body>
-    <h1>Slepá mapa na Zeměpis by Matyáš Matta</h1>
+    <h1>Slepá mapa na Zeměpis - vodstvo</h1>
     <div id="map"></div>
     <button id="submitGuess">Potvrdit můj výběr</button>
     <div id="result"></div>
     <h3 style="margin: 0.5em;">Aktuálně hledáš</h3>
     <div id="poi-type" style="margin: 0px; break-after: avoid;"></div><h2 id="poi-name"></h2>
+    <div class="bottomright">made with ❤️ by <a style="color: rgba(0, 0, 0, 0.8); text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
+
 </body>
 </html>
