--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 </head>
 <body>
-    <h1>Slepá mapa na Zeměpis - vodstvo</h1>
+    <h1>Slepá mapa na Zeměpis - povrch</h1>
     <div id="map"></div>
     <button id="submitGuess">Potvrdit můj výběr</button>
     <div id="result" style="margin: 1em"></div>
