--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       </header>
 
       	<a href="vznik_usa.html">Vznik Spojených států amerických</a>
+        <br>
+        <a href="zemepis/slepyzemak.html">Hra Slepý zemák - příprava na slepou mapu</a>
     </main>
     <div class="bottomleft"><a style="color: rgba(0, 0, 0); text-decoration:none" href="index.html">You're home aleady! 🏠</b></div>
   </body>
