added height support

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
       	<a href="vznik_usa.html">Vznik Spojených států amerických</a>
         <br>
-        <a href="zemepis/slepyzemak.html">Hra Slepý zemák - příprava na slepou mapu</a>
+        <a href="zemepis/slepyzemak.html?json=povrch.json">Slepá mapa - povrch ČR</a>
+        <br>
+        <a href="zemepis/slepyzemak.html?json=vodstvo.json">Slepá mapa - vodstvo ČR</a>
+        <br>
+        <a href="zemepis/slepyzemak.html?json=world.json&max=25">Slepá mapa - města světa</a>
     </main>
     <div class="bottomleft"><a style="color: rgba(0, 0, 0); text-decoration:none" href="index.html">You're home aleady! 🏠</b></div>
   </body>
