--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -26,6 +26,7 @@
         Před chvílí jsi hledal 
         <span id="previous-poi" style="margin: 0; font-weight: bold;"></span>
         <div id="result" style="margin: 0; border: 0; font-weight: normal; display: inline;"></div>
+        <div id="left-over" style="margin: 0; border: 0; font-weight: normal; display: inline;"></div>
     </p>
     
 
