--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Geography Guessing Game</title>
+    <title>Slepá mapa na Zeměpis</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/morphodita@0.3.0/dist/morphodita.min.js"></script>
     <script src="script.js" defer></script>
