--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -25,7 +25,7 @@
     <p style="margin: 0.3em; display: inline-block;">
         Před chvílí jsi hledal 
         <span id="previous-poi" style="margin: 0; font-weight: bold;"></span>
-        <div id="result" style="margin: 0; border: 0; font-weight: normal; display: inline;"></div>
+        <div id="result" style="margin: 0; border: 0; font-weight: normal; display: inline; max-width: 60%;"></div>
         <div id="left-over" style="margin: 0; border: 0; font-weight: normal; display: inline;"></div>
     </p>
     
