--- a/zemepis/slepyzemak.html
+++ b/zemepis/slepyzemak.html
@@ -32,7 +32,6 @@
     
 
     <div class="bottomright">made with ❤️ by <a style="color: rgba(0, 0, 0, 0.8); text-decoration:none" href="https://github.com/matyasmatta/">@matyasmatta</a></div>
-    <div class="bottomleft"><a href="https://www.buymeacoffee.com/matyasmatta"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=matyasmatta&button_colour=FFDD00&font_colour=000000&font_family=Inter&outline_colour=000000&coffee_colour=ffffff" /></a></div>
-
+    <div class="bottomleft" id="buymeacoffee"><a href="https://www.buymeacoffee.com/matyasmatta"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=☕&slug=matyasmatta&button_colour=FFDD00&font_colour=000000&font_family=Inter&outline_colour=000000&coffee_colour=ffffff" /></a></div>
 </body>
 </html>
